--- a/Student Performance Analysis and Classification.ipynb
+++ b/Student Performance Analysis and Classification.ipynb
@@ -882,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# * There is no missing values!*"
+    "# * There are no missing values!*"
    ]
   },
   {
@@ -1967,7 +1967,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Therefore, the best model for prediction of final grade, as per the given dataset, is found to be Support Vector Classifier"
+    "### Therefore, the best models for prediction of final grade, as per the given dataset, are found to be Decision Tree, Random Forest and Support Vector Classifiers"
    ]
   }
  ],
